[style] [fix] padding for .page .essay .project on .contrast layout

--- a/_includes/style/contrast.css
+++ b/_includes/style/contrast.css
@@ -6,6 +6,10 @@
   color: hsla(204, 10%, 96%, 1);
 }
 
+.contrast .page {
+  padding-bottom: 0;
+}
+
 .contrast h1,
 .contrast h2 {
   color: hsla(204, 10%, 96%, 1);
@@ -103,6 +107,12 @@
   color: hsla(204, 80%, 40%, 1);
 }
 
+@media screen and (min-width: 30em) {
+  .contrast .essay {
+    padding: 2em;
+  }
+}
+
 @media screen and (min-width: 45em) {
   .contrast .page-meta {
     margin: 2em auto;
@@ -121,7 +131,7 @@
 
   .contrast .essay {
     margin: 2em auto 0;
-    padding: 2em;
+    padding: 2.5em;
   }
 
   .contrast [role="main"] figcaption {
